deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: backend-deployment
   namespace: java-projects
spec:
   replicas: 2
   selector:
     matchLabels:
       app: backend-java
   template:
       metadata:
         labels:
           app: backend-java
       spec:
         containers:
         - name: java-api
           image: staticvooidmain/backend-java:1.1
           imagePullPolicy: Always
           resources:
              requests:
                memory: "512Mi"
                cpu: "250m"
              limits:
                memory: "1Gi"
                cpu: "500m"
           ports:
           - containerPort: 8080
