service.yaml
apiVersion: v1
kind: Service
metadata:
   name: backend-service
   namespace: java-projects
spec:
   type: LoadBalancer
   selector: 
     app: backend-java
   ports:
    - port: 8080
