ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: backend-java-ingress
    namespace: java-projects
spec:
   ingressClassName: "nginx"
   rules:
    - host: mini.kubernetes 
      http:
        paths: 
         - pathType: Prefix
           path: /api/kube
           backend:
            service:
              name: backend-service
              port: 
                number: 8080
